[gd_scene load_steps=4 format=3 uid="uid://cylcvgde4swim"]

[ext_resource type="Script" path="res://Goblin's_Path/scripts/space_shooter.gd" id="1_uklbp"]
[ext_resource type="Theme" uid="uid://brfp7htr8mxss" path="res://Goblin's_Path/new_theme.tres" id="2_80bom"]
[ext_resource type="PackedScene" uid="uid://0jif25xxt42n" path="res://Goblin's_Path/prefabs/goblin.tscn" id="3_o0p7l"]

[node name="SpaceShooter" type="Node2D"]
script = ExtResource("1_uklbp")

[node name="game_UI" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 100.0
theme = ExtResource("2_80bom")

[node name="score_label" type="Label" parent="game_UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 36.0
grow_horizontal = 2
text = "SCORE: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ship" parent="." instance=ExtResource("3_o0p7l")]
position = Vector2(144, 280)

[node name="enemy_timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="restart_timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="ship_killed" from="ship" to="." method="_on_ship_ship_killed"]
[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]
